# wiki-kit

./: .gitignore  FEEDBACK.md  LICENSE  README.md  SLAM_reading_list.md  STATE.md  boot_stap_instructions.md  master_notes.md  pyproject.toml  wiki-kit-execution-status.md
.claude/: settings.json
.claude/commands/: apply-harvests.md  bootstrap.md  harvest.md  ingest.md  lint.md  query.md  research.md  weekly-brief.md
raw/: README.md
tests/: test_audit_captures.py  test_capture_pdf.py  test_capture_url.py  test_clear_ingest_cache.py  test_common.py  test_fetch_transcript.py  test_ingest_plan.py
tools/: _common.py  audit_captures.py  capture_pdf.py  capture_polymarket_market.py  capture_url.py  clear_ingest_cache.py  fetch_transcript.py  ingest_plan.py  render_brief_html.py  send_email.py
wiki/: 2d-lidar-slam.md  CLAUDE.md  aerial-grasping.md  aerial-manipulation.md  aerial-perching.md  agentflow.md  air-ground-hybrids.md  air-vla.md  air-water-robots.md  anchor-map-protocol.md  anduril-lattice.md  anti-self-distillation.md  apple-roomplan.md  arbitrage-taxonomy.md  asymflow.md  bvlos-regulation.md  camera-calibration-and-self-calibration.md  canadian-drone-onshoring.md  cheap-lidar-pricing-guide.md  close-range-depth-sensors.md  coladlm.md  combinatorial-arbitrage-empirics.md  commercial-home-robots-perception.md  consumer-robot-vacuum-mapping.md  cooperative-aerial-manipulation.md  cosmos-3.md  deepseek-v4.md  delta-mem.md  delta-token-credit.md  detect-and-avoid.md  dream-to-fly.md  drone-agriculture-use-case.md  drone-autonomy-state.md  drone-battery-energy.md  drone-commercial-verticals.md  drone-comms-wifi.md  drone-contact-and-door-tasks.md  drone-delivery-use-case.md  drone-inspection-use-case.md  drone-manufacturing-supply-chain.md  (+131 more)
wiki/case-studies/: anthropic-claude-code-postmortem.md  anthropic-internal-study.md  cursor-agent-harness.md  cursor-fast-apply.md  klarna.md  latent-space-async-agents.md  notion-token-town.md  perplexity.md  stanford-51-enterprise-playbook.md  (+3 more)
wiki/llms/: deepseek.md  (+2 more)
(+676 files in other folders)
