[tool.poetry]
name = "wiki-kit"
version = "0.1.0"
description = "Starter kit for LLM-maintained knowledge wikis following the llm-wiki pattern"
authors = ["David Krebbet <krebbet@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "tools" }]

[tool.poetry.dependencies]
python = "^3.10"
trafilatura = "^1.12"
markdownify = "^0.13"
playwright = "^1.47"
marker-pdf = "*"              # pin loose; marker API has evolved across minor versions
pymupdf = "^1.24"             # explicit; used directly for page count
pymupdf4llm = "^0.0.17"
yt-dlp = "^2024.10"
httpx = "^0.27"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"

[tool.pytest.ini_options]
markers = [
    "network: tests that require network (slow)",
    "slow: tests that are slow even locally",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
